added mvvm implementation
references -

https://developer.android.com/jetpack/androidx/migrate

https://proandroiddev.com/building-an-android-app-using-android-architecture-components-room-viewmodel-and-livedata-702a0af899ae

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,10 @@ dependencies {
     kapt 'androidx.lifecycle:lifecycle-compiler:2.0.0' // annotationProcessor
 
 
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.0.0'
+
+    implementation 'com.google.android.material:material:1.1.0-alpha07'
+
 }
